# golf-betting-agent

./: .gitignore  LICENSE  README.md  betting_test.py  betting_tracker.py  calculate_mental_form.py  config.json  database_setup.py  db_utils.py  dfs_optimizer.py  golf_betting_agent.py  import_players.py  insights_extractor.py  lightweight_tournament_db.py  market_analyzer.py  odds_retriever.py  persona.txt  pyproject.toml  tournament_db.py  update_text_file.py  youtube_transcript.py
chatbot/: data_retrieval_orchestrator.py  head_pro_chatbot.py  head_pro_persona.txt  query_analysis_agent.py  response_generator.py
headpro_site/: app.py  config.py
headpro_site/static/css/: scorecard.css  style.css
headpro_site/static/images/: bec-r-PSkVx0OXkTA-unsplash.jpg:Zone.Identifier  cardboard-texture.jpg:Zone.Identifier  site_logo.psd  vintage-paper-texture.jpg:Zone.Identifier  white-texture.jpg:Zone.Identifier
headpro_site/static/js/: app.js
headpro_site/templates/: index.html  scorecard.html
llm/: llm_provider.py
twitter/: head_pro_persona.txt  main.py  post.py  tweet_generator.py  tweet_history.json
web/: app.py
web/templates/: 404.html  500.html  about.html  add_insight.html  betting.html  edit_insight.html  index.html  insights.html  layout.html  my_bets.html  player_betting.html  player_detail.html  players.html  process.html  process_results.html
