[project]
name = "golf-betting-agent"
version = "0.1.0"
description = "An autonomous AI system for placing bets on professional golf and sharing betting tips on Twitter."
authors = [
    {name = "chefron",email = "cmefron@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "youtube-transcript-api (>=1.0.2,<2.0.0)",
    "google-api-python-client (>=2.164.0,<3.0.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
